# SpringBootProjectGenerator

./: .gitignore  Cargo.toml  README.md
resources/: banner.txt  class.tmp  header.txt  install.tmp  install_success.tmp  pom.tmp
resources/class/: spring-ws-config.tmp
resources/dependency/: h2-db.tmp  spring-data-jpa.tmp  spring-data-rest.tmp  spring-ws.tmp
resources/plugin/: maven-jaxb2-plugin.tmp
resources/properties/: application.tmp  h2db.tmp
src/: main.rs
src/lib/: banner.rs  filter.rs  input.rs  mod.rs
src/lib/file/: class.rs  mod.rs  pom.rs
src/lib/io/: global.rs
src/lib/io/input/: filter.rs  keyboard.rs  mod.rs
src/lib/io/output/: class.rs  folder.rs  mod.rs  pom.rs
src/lib/share/: enums.rs  file.rs  filter.rs  input.rs  mod.rs  regex.rs  value.rs
src/lib/steps/: class.rs  error.rs  exit.rs  folder.rs  install.rs  mod.rs  pom.rs  project.rs  properties.rs  template.rs  version.rs
